<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="12dp"
    android:orientation="vertical"
    android:background="#E12929"
    android:theme="@style/AppTheme.Dark.Dialog"
    app:theme="@style/AppTheme.Dark.Dialog">
    
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal">
      
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="0.9"
            android:gravity="center"
            android:text="@string/year"
            android:textColor="@color/iron"
            android:textSize="20sp"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/month"
            android:textColor="@color/iron"
            android:textSize="20sp"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day"
            android:textColor="@color/iron"
            android:textSize="20sp"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/hour"
            android:textColor="@color/iron"
            android:textSize="20sp"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/minute"
            android:textColor="@color/iron"
            android:textSize="20sp"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:background="#FF4081">
      
        <cn.a6_79.message.wheel.WheelView android:id="@+id/yearWheel"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="0.9"/>
        <cn.a6_79.message.wheel.WheelView android:id="@+id/monthWheel"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"/>
        <cn.a6_79.message.wheel.WheelView android:id="@+id/dayWheel"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"/>
        <cn.a6_79.message.wheel.WheelView android:id="@+id/hourWheel"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"/>
        <cn.a6_79.message.wheel.WheelView android:id="@+id/minuteWheel"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
